# HashComb

./: .gitignore  README.md
Hash-Comb-Java-deprecated/Hash-Comb/: .project
Hash-Comb-Java-deprecated/SecMLP_FedAVG4/: .classpath  (+3 more)
Hash-Comb-Python/: .gitignore  FedAvgGameTest.bat  README.md  cliDemo.txt  configuration.pkl  configurationDemo.pkl  configurationDemo_KM_X.pkl  configurationDemo_KM_Y.pkl  configurationDemo_Mean.pkl  hashcomb.ipynb  pyproject.toml
Hash-Comb-Python/FedAvgSandBox/: avg.py  main.py  mlp.py  utils.py
Hash-Comb-Python/notebooks/: 01_basics.ipynb  02_statistics.ipynb  03_clustering.ipynb  04_mpc_addons.ipynb  05_benchmark.ipynb  hashcomb.ipynb  utils_plot.py  utils_stats.py
Hash-Comb-Python/src/: cli.py  decoder.py  encoder.py  node.py  tree.py  utils.py
Hash-Comb-Python/src/hashcomb/: __init__.py  cli.py  decoder.py  encoder.py  exceptions.py  hash.py  io.py  node.py  tree.py
Hash-Comb-Python/src/hashcomb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Hash-Comb-Python/src/hashcomb/addons/: __init__.py  aggregation.py  serialization.py
Hash-Comb-Python/src/hashcomb/cli/: __init__.py  cli.py
Hash-Comb-Python/src/hashcomb/core/: exceptions.py  hash.py  node.py  round_context.py  tree.py  validation.py
Hash-Comb-Python/src/hashcomb/decoders/: decoder.py
Hash-Comb-Python/src/hashcomb/encoders/: encoder.py  randomized_encoder.py
Hash-Comb-Python/src/hashcomb/io/: __init__.py  io.py
Hash-Comb-Python/tests/: conftest.py  test_addons.py  test_encdec.py  test_hashmap.py  test_tree.py
SecMLP_FedAVG4/: Scenario.bat  configuration.prop  pom.xml
(+157 files in other folders)
